brought files and notebooks

--- a/2_preprocessing_pipelines.ipynb
+++ b/2_preprocessing_pipelines.ipynb
@@ -2,49 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the path to the folder containing the txt files\n",
-    "folder_path = os.path.join('src', 'data', 'ecb-speeches')\n",
-    "\n",
-    "# List all txt files in the folder\n",
-    "txt_files = [f for f in os.listdir(folder_path) if f.endswith('.txt')]\n",
-    "\n",
-    "# Initialize an empty DataFrame\n",
-    "df_speeches = pd.DataFrame(columns=['date', 'content'])\n",
-    "\n",
-    "# Iterate through the txt files and read their content\n",
-    "for txt_file in txt_files:\n",
-    "    # Extract the date from the file name\n",
-    "    date_str = txt_file.split('_')[0]\n",
-    "    date = pd.to_datetime(date_str, format='%Y-%m-%d')\n",
-    "    \n",
-    "    # Read the content of the file\n",
-    "    with open(os.path.join(folder_path, txt_file), 'r') as file:\n",
-    "        content = file.read()\n",
-    "    \n",
-    "    # Append the date and content to the DataFrame\n",
-    "    df_speeches = pd.concat([df_speeches, pd.DataFrame({'date': [date], 'content': [content]})], ignore_index=True)\n",
-    "\n",
-    "# Sort the DataFrame by date\n",
-    "df_speeches = df_speeches.sort_values(by='date').reset_index(drop=True)\n"
+    "speeches = pd.read_parquet('src/Data/ecb-speeches.parquet')\n",
+    "releases = pd.read_csv(\"src/Data/ecb_releases_302.csv\")\n",
+    "announcements = pd.read_csv(\"src/Data/policy_announcements.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +98,7 @@
        "    <tr>\n",
        "      <th>2252</th>\n",
        "      <td>2022-02-23</td>\n",
-       "      <td>Frank Elderson: Prudential pathways to Paris\\n...</td>\n",
+       "      <td>Frank Elderson: Prudential pathways to Paris C...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2253</th>\n",
@@ -126,7 +108,7 @@
        "    <tr>\n",
        "      <th>2254</th>\n",
        "      <td>2022-02-25</td>\n",
-       "      <td>Frank\\nElderson:\\nTowards\\na\\nstronger\\nAnti-M...</td>\n",
+       "      <td>Frank Elderson: Towards a stronger Anti-Money ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -134,51 +116,30 @@
        "</div>"
       ],
       "text/plain": [
-       "           date                                            content\n",
-       "0    1998-07-17  Mr. Duisenberg reports on the outcome of the s...\n",
-       "1    1998-09-18  Mr. Duisenberg’s opening statement at the meet...\n",
-       "2    1998-10-12  Mr. Duisenberg speaks on changes in European f...\n",
-       "3    1998-10-12  Mr. Duisenberg's statement to the European Par...\n",
-       "4    1998-10-22  Mr. Duisenberg’s opening statement at the pres...\n",
-       "...         ...                                                ...\n",
-       "2250 2022-02-15  Christine Lagarde: 20th anniversary of the ent...\n",
-       "2251 2022-02-17  Christine Lagarde: Introductory statement - Eu...\n",
-       "2252 2022-02-23  Frank Elderson: Prudential pathways to Paris\\n...\n",
-       "2253 2022-02-23  Frank Elderson: Towards an immersive superviso...\n",
-       "2254 2022-02-25  Frank\\nElderson:\\nTowards\\na\\nstronger\\nAnti-M...\n",
+       "            date                                            content\n",
+       "0     1998-07-17  Mr. Duisenberg reports on the outcome of the s...\n",
+       "1     1998-09-18  Mr. Duisenberg’s opening statement at the meet...\n",
+       "2     1998-10-12  Mr. Duisenberg speaks on changes in European f...\n",
+       "3     1998-10-12  Mr. Duisenberg's statement to the European Par...\n",
+       "4     1998-10-22  Mr. Duisenberg’s opening statement at the pres...\n",
+       "...          ...                                                ...\n",
+       "2250  2022-02-15  Christine Lagarde: 20th anniversary of the ent...\n",
+       "2251  2022-02-17  Christine Lagarde: Introductory statement - Eu...\n",
+       "2252  2022-02-23  Frank Elderson: Prudential pathways to Paris C...\n",
+       "2253  2022-02-23  Frank Elderson: Towards an immersive superviso...\n",
+       "2254  2022-02-25  Frank Elderson: Towards a stronger Anti-Money ...\n",
        "\n",
        "[2255 rows x 2 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_speeches"
+    "speeches"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
