--- a/compact_notebook.ipynb
+++ b/compact_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,39 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the path to the folder containing the txt files\n",
-    "folder_path = os.path.join('src', 'data', 'ecb-speeches')\n",
-    "\n",
-    "# List all txt files in the folder\n",
-    "txt_files = [f for f in os.listdir(folder_path) if f.endswith('.txt')]\n",
-    "\n",
-    "# Initialize an empty DataFrame\n",
-    "df_speeches = pd.DataFrame(columns=['date', 'content'])\n",
-    "\n",
-    "# Iterate through the txt files and read their content\n",
-    "for txt_file in txt_files:\n",
-    "    # Extract the date from the file name\n",
-    "    date_str = txt_file.split('_')[0]\n",
-    "    date = pd.to_datetime(date_str, format='%Y-%m-%d')\n",
-    "    \n",
-    "    # Read the content of the file\n",
-    "    with open(os.path.join(folder_path, txt_file), 'r') as file:\n",
-    "        content = file.read()\n",
-    "    \n",
-    "    # Append the date and content to the DataFrame\n",
-    "    df_speeches = pd.concat([df_speeches, pd.DataFrame({'date': [date], 'content': [content]})], ignore_index=True)\n",
-    "\n",
-    "# Sort the DataFrame by date\n",
-    "df_speeches = df_speeches.sort_values(by='date').reset_index(drop=True)\n"
+    "speeches = pd.read_parquet('src/Data/ecb-speeches.parquet')\n",
+    "releases = pd.read_csv(\"src/Data/ecb_releases_302.csv\")\n",
+    "announcements = pd.read_csv(\"src/Data/policy_announcements.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +95,7 @@
        "    <tr>\n",
        "      <th>2252</th>\n",
        "      <td>2022-02-23</td>\n",
-       "      <td>Frank Elderson: Prudential pathways to Paris\\n...</td>\n",
+       "      <td>Frank Elderson: Prudential pathways to Paris C...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2253</th>\n",
@@ -126,7 +105,7 @@
        "    <tr>\n",
        "      <th>2254</th>\n",
        "      <td>2022-02-25</td>\n",
-       "      <td>Frank\\nElderson:\\nTowards\\na\\nstronger\\nAnti-M...</td>\n",
+       "      <td>Frank Elderson: Towards a stronger Anti-Money ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -134,34 +113,34 @@
        "</div>"
       ],
       "text/plain": [
-       "           date                                            content\n",
-       "0    1998-07-17  Mr. Duisenberg reports on the outcome of the s...\n",
-       "1    1998-09-18  Mr. Duisenberg’s opening statement at the meet...\n",
-       "2    1998-10-12  Mr. Duisenberg speaks on changes in European f...\n",
-       "3    1998-10-12  Mr. Duisenberg's statement to the European Par...\n",
-       "4    1998-10-22  Mr. Duisenberg’s opening statement at the pres...\n",
-       "...         ...                                                ...\n",
-       "2250 2022-02-15  Christine Lagarde: 20th anniversary of the ent...\n",
-       "2251 2022-02-17  Christine Lagarde: Introductory statement - Eu...\n",
-       "2252 2022-02-23  Frank Elderson: Prudential pathways to Paris\\n...\n",
-       "2253 2022-02-23  Frank Elderson: Towards an immersive superviso...\n",
-       "2254 2022-02-25  Frank\\nElderson:\\nTowards\\na\\nstronger\\nAnti-M...\n",
+       "            date                                            content\n",
+       "0     1998-07-17  Mr. Duisenberg reports on the outcome of the s...\n",
+       "1     1998-09-18  Mr. Duisenberg’s opening statement at the meet...\n",
+       "2     1998-10-12  Mr. Duisenberg speaks on changes in European f...\n",
+       "3     1998-10-12  Mr. Duisenberg's statement to the European Par...\n",
+       "4     1998-10-22  Mr. Duisenberg’s opening statement at the pres...\n",
+       "...          ...                                                ...\n",
+       "2250  2022-02-15  Christine Lagarde: 20th anniversary of the ent...\n",
+       "2251  2022-02-17  Christine Lagarde: Introductory statement - Eu...\n",
+       "2252  2022-02-23  Frank Elderson: Prudential pathways to Paris C...\n",
+       "2253  2022-02-23  Frank Elderson: Towards an immersive superviso...\n",
+       "2254  2022-02-25  Frank Elderson: Towards a stronger Anti-Money ...\n",
        "\n",
        "[2255 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_speeches"
+    "speeches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -234,8 +213,8 @@
     "\n",
     "    return latex_output\n",
     "\n",
-    "# Assuming df_speeches is already defined\n",
-    "latex_table = descriptive_statistics_to_latex(df_speeches)\n",
+    "# Assuming speeches is already defined\n",
+    "latex_table = descriptive_statistics_to_latex(speeches)\n",
     "print(latex_table)\n"
    ]
   },
@@ -448,9 +427,9 @@
     }
    ],
    "source": [
-    "df_speeches_consolidated = consolidate_lines(df_speeches)\n",
-    "df_speeches_consolidated = split_paragraphs(df_speeches_consolidated)\n",
-    "df_speeches_consolidated"
+    "speeches_consolidated = consolidate_lines(speeches)\n",
+    "speeches_consolidated = split_paragraphs(speeches_consolidated)\n",
+    "speeches_consolidated"
    ]
   },
   {
@@ -460,10 +439,10 @@
    "outputs": [],
    "source": [
     "# create counts column that counts words in content column of each row\n",
-    "df_speeches_consolidated['counts'] = df_speeches_consolidated['content'].str.split().str.len()\n",
+    "speeches_consolidated['counts'] = speeches_consolidated['content'].str.split().str.len()\n",
     "\n",
     "# remove observations with missing values and counts of less than 50\n",
-    "df_speeches_consolidated = df_speeches_consolidated[(df_speeches_consolidated['counts']>=20) & (df_speeches_consolidated['counts']<500)]"
+    "speeches_consolidated = speeches_consolidated[(speeches_consolidated['counts']>=20) & (speeches_consolidated['counts']<500)]"
    ]
   },
   {
@@ -592,7 +571,7 @@
     }
    ],
    "source": [
-    "df_speeches_consolidated"
+    "speeches_consolidated"
    ]
   },
   {
@@ -600,10 +579,7 @@
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "df_speeches_consolidated.to_csv('src/output/df_speeches_consolidated.csv', index=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -714,10 +690,10 @@
     "df = pd.DataFrame()\n",
     "\n",
     "# add content\n",
-    "df['content'] = df_speeches_consolidated['content'].head(10)\n",
+    "df['content'] = speeches_consolidated['content'].head(10)\n",
     "\n",
     "# Apply the sentiment analysis function to the 'content' column for the first 10 rows\n",
-    "df[['positive', 'negative']] = df_speeches_consolidated['content'].head(10).apply(\n",
+    "df[['positive', 'negative']] = speeches_consolidated['content'].head(10).apply(\n",
     "    lambda x: pd.Series(calculate_sentiment_distilbert(x))\n",
     ")\n",
     "# Print the updated DataFrame\n",
@@ -805,7 +781,7 @@
     "end_date = '2008-09-30'\n",
     "\n",
     "# Filter the DataFrame based on the date range\n",
-    "subset_df = df_speeches[(df_speeches['date'] >= start_date) & (df_speeches['date'] <= end_date)]\n",
+    "subset_df = speeches[(speeches['date'] >= start_date) & (speeches['date'] <= end_date)]\n",
     "\n",
     "# Apply the sentiment analysis function to the 'content' column for the subset\n",
     "subset_df[['positive', 'negative']] = subset_df['content'].apply(lambda x: pd.Series(calculate_sentiment_distilbert(x)))\n",
