removed bootstrap resampling and replaced with permutation importance

--- a/compact_notebook.ipynb
+++ b/compact_notebook.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,29 +53,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1998-07-17</td>\n",
-       "      <td>Mr. Duisenberg reports on the outcome of the s...</td>\n",
+       "      <th>262</th>\n",
+       "      <td>2005-01-17</td>\n",
+       "      <td>European Central Bank: Press conference - intr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1998-09-18</td>\n",
-       "      <td>Mr. Duisenberg’s opening statement at the meet...</td>\n",
+       "      <th>263</th>\n",
+       "      <td>2005-01-26</td>\n",
+       "      <td>Jean-Claude Trichet: The euro - successes and ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1998-10-12</td>\n",
-       "      <td>Mr. Duisenberg speaks on changes in European f...</td>\n",
+       "      <th>264</th>\n",
+       "      <td>2005-02-03</td>\n",
+       "      <td>Jean-Claude Trichet: Interview with Les Echos ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1998-10-12</td>\n",
-       "      <td>Mr. Duisenberg's statement to the European Par...</td>\n",
+       "      <th>265</th>\n",
+       "      <td>2005-02-03</td>\n",
+       "      <td>Jean-Claude Trichet: Communication, transparen...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1998-10-22</td>\n",
-       "      <td>Mr. Duisenberg’s opening statement at the pres...</td>\n",
+       "      <th>266</th>\n",
+       "      <td>2005-02-03</td>\n",
+       "      <td>European Central Bank: Press conference on the...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -109,16 +109,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2255 rows × 2 columns</p>\n",
+       "<p>1993 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            date                                            content\n",
-       "0     1998-07-17  Mr. Duisenberg reports on the outcome of the s...\n",
-       "1     1998-09-18  Mr. Duisenberg’s opening statement at the meet...\n",
-       "2     1998-10-12  Mr. Duisenberg speaks on changes in European f...\n",
-       "3     1998-10-12  Mr. Duisenberg's statement to the European Par...\n",
-       "4     1998-10-22  Mr. Duisenberg’s opening statement at the pres...\n",
+       "262   2005-01-17  European Central Bank: Press conference - intr...\n",
+       "263   2005-01-26  Jean-Claude Trichet: The euro - successes and ...\n",
+       "264   2005-02-03  Jean-Claude Trichet: Interview with Les Echos ...\n",
+       "265   2005-02-03  Jean-Claude Trichet: Communication, transparen...\n",
+       "266   2005-02-03  European Central Bank: Press conference on the...\n",
        "...          ...                                                ...\n",
        "2250  2022-02-15  Christine Lagarde: 20th anniversary of the ent...\n",
        "2251  2022-02-17  Christine Lagarde: Introductory statement - Eu...\n",
@@ -126,23 +126,43 @@
        "2253  2022-02-23  Frank Elderson: Towards an immersive superviso...\n",
        "2254  2022-02-25  Frank Elderson: Towards a stronger Anti-Money ...\n",
        "\n",
-       "[2255 rows x 2 columns]"
+       "[1993 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# remove the observations that are earlier than 2005\n",
+    "speeches = speeches[speeches['date'] >= '2005-01-01']\n",
     "speeches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_24506/2513888785.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['year'] = pd.to_datetime(df['date']).dt.year\n",
+      "/tmp/ipykernel_24506/2513888785.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['month'] = pd.to_datetime(df['date']).dt.month\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -152,13 +172,6 @@
       " & Jan & Feb & Mar & Apr & May & Jun & Jul & Aug & Sep & Oct & Nov & Dec & Total \\\\\n",
       "year &  &  &  &  &  &  &  &  &  &  &  &  &  \\\\\n",
       "\\midrule\n",
-      "1998 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 1 & 3 & 2 & 1 & 8 \\\\\n",
-      "1999 & 4 & 2 & 4 & 1 & 6 & 5 & 3 & 0 & 4 & 7 & 7 & 3 & 46 \\\\\n",
-      "2000 & 3 & 2 & 4 & 3 & 5 & 3 & 3 & 0 & 6 & 7 & 7 & 2 & 45 \\\\\n",
-      "2001 & 3 & 4 & 3 & 1 & 6 & 4 & 2 & 0 & 5 & 3 & 5 & 0 & 36 \\\\\n",
-      "2002 & 5 & 4 & 5 & 4 & 5 & 2 & 3 & 0 & 3 & 5 & 2 & 2 & 40 \\\\\n",
-      "2003 & 1 & 3 & 2 & 3 & 3 & 3 & 3 & 0 & 2 & 3 & 4 & 4 & 31 \\\\\n",
-      "2004 & 2 & 6 & 1 & 8 & 7 & 5 & 2 & 1 & 5 & 7 & 6 & 6 & 56 \\\\\n",
       "2005 & 2 & 5 & 6 & 6 & 4 & 10 & 2 & 1 & 3 & 4 & 3 & 5 & 51 \\\\\n",
       "2006 & 3 & 3 & 5 & 5 & 10 & 6 & 5 & 2 & 1 & 6 & 6 & 6 & 58 \\\\\n",
       "2007 & 3 & 4 & 4 & 7 & 7 & 11 & 6 & 3 & 7 & 14 & 10 & 12 & 88 \\\\\n",
@@ -177,7 +190,7 @@
       "2020 & 8 & 17 & 11 & 9 & 4 & 5 & 6 & 3 & 10 & 10 & 11 & 5 & 99 \\\\\n",
       "2021 & 1 & 2 & 11 & 7 & 4 & 7 & 7 & 0 & 2 & 2 & 13 & 4 & 60 \\\\\n",
       "2022 & 3 & 7 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 10 \\\\\n",
-      "Total & 155 & 182 & 198 & 199 & 214 & 211 & 156 & 50 & 212 & 242 & 278 & 158 & 2255 \\\\\n",
+      "Total & 137 & 161 & 179 & 179 & 182 & 189 & 139 & 49 & 186 & 207 & 245 & 140 & 1993 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -213,7 +226,7 @@
     "\n",
     "    return latex_output\n",
     "\n",
-    "# Assuming speeches is already defined\n",
+    "# create a latex table using the function\n",
     "latex_table = descriptive_statistics_to_latex(speeches)\n",
     "print(latex_table)\n"
    ]
