restructured the project, brought the Colab_sentiment_extraction.ipynb

--- a/Project_main.ipynb
+++ b/Project_main.ipynb
@@ -193,6 +193,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 769,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrrrrrrrrrrrrr}\n",
+      "\\toprule\n",
+      " & Jan & Feb & Mar & Apr & May & Jun & Jul & Aug & Sep & Oct & Nov & Dec & Total \\\\\n",
+      "year &  &  &  &  &  &  &  &  &  &  &  &  &  \\\\\n",
+      "\\midrule\n",
+      "1998 & 0 & 0 & 0 & 0 & 0 & 0 & 14 & 0 & 17 & 53 & 33 & 19 & 136 \\\\\n",
+      "1999 & 112 & 39 & 94 & 30 & 114 & 167 & 59 & 0 & 108 & 174 & 135 & 68 & 1100 \\\\\n",
+      "2000 & 77 & 45 & 85 & 51 & 83 & 77 & 62 & 0 & 133 & 209 & 116 & 30 & 968 \\\\\n",
+      "2001 & 42 & 77 & 57 & 16 & 134 & 96 & 43 & 0 & 79 & 68 & 88 & 0 & 700 \\\\\n",
+      "2002 & 63 & 63 & 94 & 60 & 66 & 44 & 37 & 0 & 65 & 66 & 17 & 25 & 600 \\\\\n",
+      "2003 & 9 & 52 & 43 & 32 & 49 & 40 & 37 & 0 & 34 & 23 & 67 & 112 & 498 \\\\\n",
+      "2004 & 20 & 111 & 12 & 219 & 185 & 103 & 62 & 13 & 114 & 140 & 132 & 99 & 1210 \\\\\n",
+      "2005 & 27 & 100 & 129 & 120 & 72 & 254 & 30 & 10 & 98 & 107 & 69 & 134 & 1150 \\\\\n",
+      "2006 & 78 & 82 & 99 & 85 & 287 & 191 & 156 & 26 & 15 & 124 & 116 & 183 & 1442 \\\\\n",
+      "2007 & 35 & 67 & 85 & 155 & 257 & 321 & 112 & 76 & 168 & 356 & 290 & 316 & 2238 \\\\\n",
+      "2008 & 330 & 245 & 177 & 468 & 228 & 277 & 270 & 31 & 475 & 331 & 399 & 322 & 3553 \\\\\n",
+      "2009 & 194 & 305 & 295 & 232 & 71 & 473 & 174 & 67 & 380 & 185 & 374 & 214 & 2964 \\\\\n",
+      "2010 & 135 & 164 & 217 & 404 & 214 & 329 & 131 & 13 & 196 & 360 & 253 & 161 & 2577 \\\\\n",
+      "2011 & 220 & 291 & 240 & 176 & 377 & 391 & 154 & 93 & 249 & 401 & 378 & 165 & 3135 \\\\\n",
+      "2012 & 12 & 109 & 139 & 266 & 226 & 172 & 69 & 94 & 239 & 268 & 279 & 178 & 2051 \\\\\n",
+      "2013 & 159 & 258 & 176 & 258 & 322 & 280 & 197 & 69 & 291 & 387 & 306 & 218 & 2921 \\\\\n",
+      "2014 & 102 & 251 & 186 & 297 & 311 & 212 & 277 & 60 & 372 & 175 & 279 & 56 & 2578 \\\\\n",
+      "2015 & 220 & 197 & 195 & 369 & 264 & 177 & 87 & 74 & 217 & 337 & 395 & 165 & 2697 \\\\\n",
+      "2016 & 208 & 223 & 160 & 228 & 209 & 341 & 33 & 55 & 120 & 116 & 247 & 183 & 2123 \\\\\n",
+      "2017 & 187 & 215 & 324 & 350 & 301 & 240 & 292 & 193 & 371 & 290 & 399 & 67 & 3229 \\\\\n",
+      "2018 & 155 & 245 & 332 & 108 & 467 & 73 & 258 & 21 & 137 & 275 & 362 & 125 & 2558 \\\\\n",
+      "2019 & 205 & 278 & 210 & 111 & 125 & 185 & 223 & 22 & 208 & 456 & 467 & 225 & 2715 \\\\\n",
+      "2020 & 121 & 336 & 149 & 134 & 65 & 86 & 112 & 62 & 180 & 159 & 260 & 147 & 1811 \\\\\n",
+      "2021 & 26 & 46 & 190 & 148 & 68 & 142 & 115 & 0 & 16 & 34 & 108 & 58 & 951 \\\\\n",
+      "2022 & 42 & 72 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 114 \\\\\n",
+      "Total & 2779 & 3871 & 3688 & 4317 & 4495 & 4671 & 3004 & 979 & 4282 & 5094 & 5569 & 3270 & 46019 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def descriptive_statistics_to_latex(df):\n",
+    "    \"\"\"\n",
+    "    Convert a DataFrame containing speech dates into a LaTeX table format \n",
+    "    showing the frequency of speeches by month for each year.\n",
+    "\n",
+    "    The function extracts the year and month from the 'date' column, computes \n",
+    "    the frequency of speeches for each month and year, and then formats the \n",
+    "    results into a LaTeX table.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - df (pandas.DataFrame): DataFrame containing a 'date' column with speech dates.\n",
+    "\n",
+    "    Returns:\n",
+    "    - str: A string containing the LaTeX table representation of the speech frequency.\n",
+    "    \"\"\"\n",
+    "    # Extract year and month from 'date' column\n",
+    "    df['year'] = pd.to_datetime(df['date']).dt.year\n",
+    "    df['month'] = pd.to_datetime(df['date']).dt.month\n",
+    "    \n",
+    "    # Frequency of speeches by month for each year\n",
+    "    monthly_count = df.groupby(['year', 'month']).size().unstack(fill_value=0)\n",
+    "    \n",
+    "    # Adding a column for yearly total\n",
+    "    monthly_count['Total'] = monthly_count.sum(axis=1)\n",
+    "    \n",
+    "    # Rename month columns for clarity\n",
+    "    month_names = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
+    "    monthly_count.columns = month_names + ['Total']\n",
+    "    \n",
+    "    # Add a row for monthly total\n",
+    "    monthly_count.loc['Total', :] = monthly_count.sum(axis=0)\n",
+    "    \n",
+    "    # Convert the DataFrame to integer type\n",
+    "    monthly_count = monthly_count.astype(int)\n",
+    "    \n",
+    "    # Convert to LaTeX format\n",
+    "    latex_output = monthly_count.to_latex()\n",
+    "\n",
+    "    return latex_output\n",
+    "\n",
+    "# create a latex table using the function\n",
+    "latex_table = descriptive_statistics_to_latex(sentiments)\n",
+    "print(latex_table)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
